--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -1,16 +1,28 @@
 server {
     listen 80;
-    index index.php;
-    root /var/www/public;
+    server_name admin.ventodoro.ru;
 
-    client_max_body_size 51g;
-    client_body_buffer_size 512k;
-    client_body_in_file_only clean;
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/acme-challenge;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name admin.ventodoro.ru;
+
+    ssl_certificate /etc/letsencrypt/live/admin.ventodoro.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.ventodoro.ru/privkey.pem;
+
+    root /var/www/public;
+    index index.php;
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass laravel:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -19,9 +31,5 @@ server {
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
-        gzip_static on;
     }
-
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
 }
