--- a/docker/nginx/laravel.conf
+++ b/docker/nginx/laravel.conf
@@ -2,22 +2,6 @@ server {
     listen 80;
     server_name admin.ventodoro.ru;
 
-    location ^~ /.well-known/acme-challenge/ {
-        root /var/www/acme-challenge;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name admin.ventodoro.ru;
-
-    ssl_certificate /etc/letsencrypt/live/admin.ventodoro.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/admin.ventodoro.ru/privkey.pem;
-
     root /var/www/public;
     index index.php;
 
@@ -26,10 +10,32 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 }
+
+# server {
+#     listen 443 ssl;
+#     server_name admin.ventodoro.ru;
+
+#     ssl_certificate /etc/letsencrypt/live/admin.ventodoro.ru/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/admin.ventodoro.ru/privkey.pem;
+
+#     root /var/www/public;
+#     index index.php;
+
+#     location ~ \.php$ {
+#         fastcgi_pass laravel:9000;
+#         fastcgi_index index.php;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param PATH_INFO $fastcgi_path_info;
+#     }
+
+#     location / {
+#         try_files $uri $uri/ /index.php?$query_string;
+#     }
+# }
